update the defconfig , adding some USB drivers

--- a/arch/arm/configs/ntablet_870a_5648_defconfig
+++ b/arch/arm/configs/ntablet_870a_5648_defconfig
@@ -218,11 +218,15 @@ CONFIG_USB_RTL8150=y
 CONFIG_USB_RTL8152=y
 CONFIG_USB_NET_CDC_MBIM=y
 CONFIG_USB_NET_DM9601=y
+CONFIG_USB_NET_SR9700=y
+CONFIG_USB_NET_SR9800=y
 CONFIG_USB_NET_SMSC75XX=y
 CONFIG_USB_NET_SMSC95XX=y
 CONFIG_USB_NET_MCS7830=y
 # CONFIG_USB_NET_CDC_SUBSET is not set
 # CONFIG_USB_NET_ZAURUS is not set
+CONFIG_USB_IPHETH=y
+CONFIG_USB_NET_CH9200=y
 CONFIG_LIBERTAS_THINFIRM=y
 CONFIG_USB_NET_RNDIS_WLAN=y
 CONFIG_B43=y
@@ -439,6 +443,10 @@ CONFIG_USB_OHCI_HCD_PLATFORM=y
 CONFIG_USB_PRINTER=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_DWC2=y
+CONFIG_USB_SERIAL=y
+CONFIG_USB_SERIAL_CH341=y
+CONFIG_USB_SERIAL_CP210X=y
+CONFIG_USB_SERIAL_FTDI_SIO=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_DEBUG_FILES=y
 CONFIG_USB_GADGET_VBUS_DRAW=500
@@ -468,8 +476,6 @@ CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_FAKE=y
 CONFIG_RTC_DRV_HYM8563=y
 CONFIG_RTC_DRV_RK808=y
-CONFIG_DMADEVICES=y
-CONFIG_PL330_DMA=y
 CONFIG_STAGING=y
 CONFIG_ASHMEM=y
 # CONFIG_ANDROID_TIMED_OUTPUT is not set
