--- a/arch/arm/configs/ntablet_870a_5648_defconfig
+++ b/arch/arm/configs/ntablet_870a_5648_defconfig
@@ -522,6 +522,7 @@ CONFIG_NVMEM=y
 CONFIG_ROCKCHIP_EFUSE=y
 CONFIG_ROCKCHIP_OTP=y
 CONFIG_RK_HEADSET=y
+CONFIG_YEACREATE_GPIO_ADC0=y
 CONFIG_ROCKCHIP_SIP=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
