--- a/arch/arm/configs/ntablet_870a_5648_defconfig
+++ b/arch/arm/configs/ntablet_870a_5648_defconfig
@@ -477,6 +477,8 @@ CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_FAKE=y
 CONFIG_RTC_DRV_HYM8563=y
 CONFIG_RTC_DRV_RK808=y
+CONFIG_DMADEVICES=y
+CONFIG_PL330_DMA=y
 CONFIG_STAGING=y
 CONFIG_ASHMEM=y
 # CONFIG_ANDROID_TIMED_OUTPUT is not set
