--- a/arch/arm/configs/ntablet_870a_5648_defconfig
+++ b/arch/arm/configs/ntablet_870a_5648_defconfig
@@ -454,6 +454,9 @@ CONFIG_USB_GADGET_VBUS_DRAW=500
 CONFIG_USB_CONFIGFS=y
 CONFIG_USB_CONFIGFS_ACM=y
 CONFIG_USB_CONFIGFS_MASS_STORAGE=y
+CONFIG_USB_CONFIGFS_F_FS=y
+CONFIG_USB_CONFIGFS_F_MTP=y
+CONFIG_USB_CONFIGFS_F_PTP=y
 CONFIG_USB_CONFIGFS_UEVENT=y
 CONFIG_USB_CONFIGFS_F_UVC=y
 CONFIG_USB20_HOST=y
